/*
 * $Id: ChangeLog,v 1.65 2006-01-17 03:04:46 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-01-16 21:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/oohg.h
  * source/c_controlmisc.c
  * source/c_windows.c
  * source/h_controlmisc.prg
  * source/h_windows.prg
    + Added TWindow:Events() method. It concentrates "parent's"
      commands for allow controls to have internal controls.
    + Added TWindow:OverWndProc property. It's like ::WndProc property
      but it's executed BEFORE default :EVENTS() method.

2006-01-09 09:12 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    ! Fixed to force hide "additional controls" when it's inside
      a TAB page.

2005-12-27 21:49 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_image.c
  * source/h_image.prg
    ! Fixed memory leak.
  * source/h_button.prg
    * ::lNoTransparent property added for simple optimization to
      ::Picture method.

2005-12-08 21:51 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_tab.prg
    * Forced re-draw controls when they are included in a TAB page.

2005-12-03 18:31 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c
    * Changed an item-copy declaration.
    * Fixed for not to search a zero-value ID in GetControlObjectById().
  * source/c_windows.c
    * Removed/fixed a possible RETURN-value loss.
  * source/h_grid.prg
  * source/h_richeditbox.prg
  * source/h_windows.prg
    ! Fixed fontcolor/backcolor default definition.

2005-12-02 19:30 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_error.prg
  * source/errorsys.prg
     * more error control optimization information html and text

2005-12-02 08:19 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_error.prg
  * source/errorsys.prg