@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.65 2006-01-17 03:04:46 guerra000 Exp $
+ * $Id: ChangeLog,v 1.66 2006-01-18 05:43:42 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-01-17 23:42 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * include/i_windefs.h
+  * source/c_label.c
+  * source/h_label.prg
+    * InitLabel() receives Style and StyleEx instead of individual flags.
 
 2006-01-16 21:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * include/oohg.h
